# cloudbandPy

./: .gitignore  LICENSE.txt  README.md  convert.py  environment.yml  requirements.txt  setup.cfg  setup.py
analysis/: OLR_threshold.py  map_gpcp_cloudband.py  plot_annualcycle_timeseries.py  plot_cb_density.py  plot_distribution_cb_area.py  plot_distribution_number_of_cb.py  plot_world_cb_density.py  run_analysis_clim_cloudbands_over_gpcp_precipitation.py  run_distribution_cb_area_southPacific.py
config/: config_analysis.yml  config_analysis_world_cb_density.yml  config_cbworkflow_MERRA2.yml  config_cbworkflow_northPacific.yml  config_cbworkflow_northernhemisphere.yml  config_cbworkflow_southAfricaIO.yml  config_cbworkflow_southAtlantic.yml  config_cbworkflow_southIndianOcean.yml  config_cbworkflow_southPacific.yml  config_cbworkflow_southPacific_tb.yml  config_cbworkflow_southernhemisphere.yml
data/: daily_variable19790110.00-19790118.00-southPacific.npy  daily_variable19790119.00-19790124.00-southPacific.npy  lats_globe0.5_ERA5.npy  list_of_cloud_bands19980627.00-19980627.00-northernhemisphere.pickle  list_of_cloud_bands20110626.00-20110626.00-northernhemisphere.pickle  list_of_cloud_bands20210127.00-20210127.00-southernhemisphere.pickle  listofdates20210101.00-20211231.00-southPacific.npy  lons_globe0.5_ERA5.npy  olrERA5_19980627.00-19980627.00-northernhemisphere.npy  olrERA5_20210127.00-20210127.00-southernhemisphere.npy  top_net_thermal_radiation_1959_2021_mean.nc
notebooks/: ellipse_around_cloud_band.ipynb  ellipse_around_cloud_band_inheritance.ipynb  (+14 more)
(+64 files in other folders)
