[metadata]
name = cloudbandpy
version = 1.2.0
author = Romain Pilon
author_email = romain.pilon@gmail.com
description = A Python package for atmospheric cloud bands detection.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romainpilon/cloudbandpy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy>=1.23.5
    netcdf4>=1.6.2
    pandas>=1.5
    pyyaml>=6.0
    scikit-image>=0.19.2
    colorcet>=3.0
    metpy>=1.4.0
    proj
    cartopy>=0.21.1

[options.packages.find]
where = src